--- a/Deep Learning/Models/Latent Diffusion Model /AutoEncoder.ipynb
+++ b/Deep Learning/Models/Latent Diffusion Model /AutoEncoder.ipynb
@@ -619,7 +619,7 @@
    "outputs": [],
    "source": [
     "nb_epochs = 10\n",
-    "display_interval = 5  # Afficher les images tous les 5 epochs\n",
+    "display_interval = 5\n",
     "\n",
     "# Stocker un batch de test pour éviter d'appeler next(iter(testloader)) à chaque epoch\n",
     "test_images, _ = next(iter(testloader))\n",
